[gd_scene load_steps=8 format=2]

[ext_resource path="res://Souls/PNG/32x32/tile000.png" type="Texture" id=1]
[ext_resource path="res://Player/png/Idle (1).png" type="Texture" id=2]
[ext_resource path="res://GameStory.gd" type="Script" id=3]
[ext_resource path="res://assets/StartMessage.png" type="Texture" id=4]
[ext_resource path="res://assets/ContinueYellow.png" type="Texture" id=5]
[ext_resource path="res://assets/Ove-Melaa-Whoozer.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "SoulShatter"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite4:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite5:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite6:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite7:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 272, 152 ), Vector2( 216, 160 ), Vector2( 216, 160 ), Vector2( -64, 120 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite3:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 272, 152 ), Vector2( 216, 128 ), Vector2( 216, 128 ), Vector2( -64, 56 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite4:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 272, 152 ), Vector2( 224, 96 ), Vector2( 224, 96 ), Vector2( -8, -32 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite5:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 272, 152 ), Vector2( 240, 72 ), Vector2( 240, 72 ), Vector2( 184, -32 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Sprite6:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 272, 152 ), Vector2( 272, 64 ), Vector2( 272, 64 ), Vector2( 280, -40 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Sprite7:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 272, 152 ), Vector2( 304, 80 ), Vector2( 304, 80 ), Vector2( 344, 32 ) ]
}

[node name="GameStory" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 288, 144 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -64, 120 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( -64, 56 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( -8, -32 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 184, -32 )
texture = ExtResource( 1 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 280, -40 )
texture = ExtResource( 1 )

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 344, 32 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SoulShatter = SubResource( 1 )

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( 96, 88 )
scale = Vector2( 0.140714, 0.114599 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 140, 160 )
scale = Vector2( 0.08, 0.08 )
stream = ExtResource( 6 )
autoplay = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 140.0
margin_top = 160.0
margin_right = 1540.0
margin_bottom = 397.0
rect_scale = Vector2( 0.08, 0.08 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1400.0
margin_bottom = 237.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_right = 1400.0
margin_bottom = 237.0
texture_normal = ExtResource( 5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
